# rust_app_with_docker

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml  initdb.sql
src/: main.rs
