[package]
name = "rust_app_with_db"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
warp = "0.3"
serde = {version = "1", features = ["derive"] }
serde_derive = "1"
chrono = { version = "0", features = ["serde"] }
bb8 = "0"
bb8-postgres = "0"
tokio-postgres = { version = "0", features = ["with-chrono-0_4"] }